# hexagon_fuzz

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  HexQEMU.py  dockerfile  firmware_config.json  flake.nix  fuzz.sh  readme.md  readme.md.old  rust-toolchain.toml
.cargo/: config.toml
docs/: emulation.md  index.md  ios_firmware_extraction.md  qemu-hexagon.md  reverse_engineering.md  toolchain_setup.md  usage.md
scripts/: ghidra_colorize_qemu_trace.py  ghidra_colorize_qemu_trace_per_thread.py  tmux_bootstrap.sh
src/: breakpoints.rs  config.rs  fuzz.rs  main.rs  unwinder.rs  utils.rs
