[package]
name = "baseband_fuzz"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "fuzzing"]
std = []
simplemanager = []
fuzzing = []

[profile.release]
incremental = true
debug = true
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
#libafl = { path = "../LibAFL/libafl" }
#libafl_bolts = { path = "../LibAFL/libafl_bolts" }
#libafl_qemu = { path = "../LibAFL/libafl_qemu", features = ["hexagon", "systemmode"]}
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev = "2763d945a334ab08501a19b880286a6b2e595824" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev = "2763d945a334ab08501a19b880286a6b2e595824"}
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL", rev = "2763d945a334ab08501a19b880286a6b2e595824", features = ["hexagon", "systemmode"] }
env_logger = "*"
lazy_static = "1.4.0"

