[package]
name = "hexagon_fuzz"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
debug = true
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev = "2763d945a334ab08501a19b880286a6b2e595824" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev = "2763d945a334ab08501a19b880286a6b2e595824" }
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL", rev = "2763d945a334ab08501a19b880286a6b2e595824", features = [
    "hexagon",
    "systemmode",
] }
env_logger = { version = "0.11.8" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
log = { version = "0.4.27", default-features = false}
